k8s-manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secureforge-ui
  namespace: secureforge
  labels:
    app: secureforge-ui
spec:
  type: ClusterIP
  selector:
    app: secureforge-ui
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
