k8s-manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secureforge-ui
  namespace: secureforge
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: secureforge.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: secureforge-ui
                port:
                  number: 80
